--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
          FlutterApplication and put your custom class here. -->
     <application
             android:name="io.flutter.app.FlutterApplication"
-            android:label="flutter_helloworld"
+            android:label="flutter_grpc"
             android:icon="@mipmap/ic_launcher">
         <activity
                 android:name=".MainActivity"
